--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/styles.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/styles.css
@@ -2321,3 +2321,38 @@ h2.p2 span strong {
 .catalog-category-view .price-box .minimal-price-link {display: block;}
 /* .catalog-category-view .products-grid .price-box .minimal-price-link .price {padding: 0;}
  */.catalog-category-view .products-grid .price-box .minimal-price-link .label {float: left; padding-right: 10px;}
+
+/** notice-cookie */
+#notice-cookie-block {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 92px;
+  padding: 14px;
+  background-color: #fff;
+  z-index: 999999999;
+}
+
+@media (-webkit-min-device-pixel-ratio: 2) and (max-device-width: 667px),
+       (-webkit-min-device-pixel-ratio: 3) and (max-device-width: 736px),
+       only screen and (max-width: 648px) {
+    #notice-cookie-block {
+      right: 0;
+    }
+}
+
+#notice-cookie-block .notice-text {
+  display: inline-block;
+  width: 100%;
+  margin-right: -4px;
+}
+#notice-cookie-block .actions {
+  text-align: right;
+  float: right;
+}
+#notice-cookie-block .actions .button,
+#notice-cookie-block .actions .button span {
+  height: 25px;
+  line-height: 25px;
+  text-transform: capitalize;
+}
