--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
@@ -63,6 +63,10 @@
             <action method="addItem"><type>skin_js</type><script>js/script.js</script></action>
             <action method="addItem"><type>skin_js</type><script>js/jquery.simplemodal.1.4.4.min.js</script></action>
             <action method="addItem"><type>skin_js</type><script>js/blog.js</script></action>
+            <action method="removeItem"><type>skin_css</type><name>js/fancybox/jquery.fancybox-1.3.4.css</name></action>
+            <action method="removeItem"><type>skin_js</type><name>js/fancybox/jquery.fancybox-1.3.4.pack.js</name></action>
+            <action method="addItem"><type>skin_css</type><name>js/fancybox/jquery.fancybox.css</name></action>
+            <action method="addItem"><type>skin_js</type><name>js/fancybox/jquery.fancybox.pack.js</name></action>
         </reference>
 
         <!-- add currency and cart block in header -->
