--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
@@ -181,6 +181,9 @@
             </action>
             <action method="unsetChild"><name>global_messages</name></action>
         </reference>
+        <reference name="product.info.options.wrapper.bottom">
+            <remove name="product.clone_prices" />
+        </reference>
     </catalog_product_view>
 
     <catalog_product_send>
