Update fonts in CSS

--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/button.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/button.css
@@ -6,7 +6,7 @@
 	border-radius: 8px;
 	background-color: #30409f;
 	color: white;
-	font-family: lato;
+	font-family: "Lato";
 	font-size: 14px;
 	text-transform: uppercase;
 }
