--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/form.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/form.css
@@ -1,6 +1,6 @@
 .form {
 	display: block; /* forcé à inline par defaut */
-	font-family: lato;
+	font-family: "Lato";
 }
 .form * {
 	box-sizing: border-box;
