--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/well.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/well.css
@@ -4,7 +4,7 @@
 	padding: 10px 30px;
 	border-radius: 10px;
 	background-color: #f6f6f6;
-	font-family: lato;
+	font-family: "Lato";
 }
 
 .well--block { /* Force and reset some style for blocks */
