--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/page/html/head.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/page/html/head.phtml
@@ -44,6 +44,7 @@ $config_slideshow = Mage::getStoreConfig('shopperslideshow', Mage::app()->getSto
 <link rel="apple-touch-icon" sizes="72x72" href="<?php echo $this->getSkinUrl(); ?>apple-touch-icon-72x72.png" />
 <link rel="apple-touch-icon" sizes="114x114" href="<?php echo $this->getSkinUrl(); ?>apple-touch-icon-114x114.png" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 <script type="text/javascript" src="https://www.jumbobag.fr/skin/frontend/new_jumbobag/default/js/wow.js"></script>
 <script>
     new WOW().init();
