--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/variables.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/variables.css
@@ -1010,47 +1010,12 @@
   font-weight: normal;
   font-style: normal;
 }
-@font-face {
-  font-family: 'Lato-Black';
-  src: url('../fonts/Lato-Black.eot');
-  src: url('../fonts/Lato-Black.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Black.woff') format('woff'), url('../fonts/Lato-Black.ttf') format('truetype'), url('../fonts/Lato-Black.svg#Lato-Black') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato-Bold';
-  src: url('../fonts/Lato-Bold.eot');
-  src: url('../fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Bold.woff') format('woff'), url('../fonts/Lato-Bold.ttf') format('truetype'), url('../fonts/Lato-Bold.svg#Lato-Bold') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato-Heavy';
-  src: url('../fonts/Lato-Heavy.eot');
-  src: url('../fonts/Lato-Heavy.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Heavy.woff') format('woff'), url('../fonts/Lato-Heavy.ttf') format('truetype'), url('../fonts/Lato-Heavy.svg#Lato-Heavy') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato-Regular';
-  src: url('../fonts/Lato-Regular.eot');
-  src: url('../fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Regular.woff') format('woff'), url('../fonts/Lato-Regular.ttf') format('truetype'), url('../fonts/Lato-Regular.svg#Lato-Regular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato-Thin';
-  src: url('../fonts/Lato-Thin.eot');
-  src: url('../fonts/Lato-Thin.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Thin.woff') format('woff'), url('../fonts/Lato-Thin.ttf') format('truetype'), url('../fonts/Lato-Thin.svg#Lato-Thin') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
 #toTop {
   display: none !important;
 }
 p {
   font-size: 16px;
-  font-family: 'Lato-Regular', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #666666;
   line-height: 1.5em;
 }
