--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/modern/css/local.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/modern/css/local.css
@@ -1011,47 +1011,12 @@
   font-weight: normal;
   font-style: normal;
 }
-@font-face {
-  font-family: 'Lato-Black';
-  src: url('../fonts/Lato-Black.eot');
-  src: url('../fonts/Lato-Black.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Black.woff') format('woff'), url('../fonts/Lato-Black.ttf') format('truetype'), url('../fonts/Lato-Black.svg#Lato-Black') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato-Bold';
-  src: url('../fonts/Lato-Bold.eot');
-  src: url('../fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Bold.woff') format('woff'), url('../fonts/Lato-Bold.ttf') format('truetype'), url('../fonts/Lato-Bold.svg#Lato-Bold') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato-Heavy';
-  src: url('../fonts/Lato-Heavy.eot');
-  src: url('../fonts/Lato-Heavy.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Heavy.woff') format('woff'), url('../fonts/Lato-Heavy.ttf') format('truetype'), url('../fonts/Lato-Heavy.svg#Lato-Heavy') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato-Regular';
-  src: url('../fonts/Lato-Regular.eot');
-  src: url('../fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Regular.woff') format('woff'), url('../fonts/Lato-Regular.ttf') format('truetype'), url('../fonts/Lato-Regular.svg#Lato-Regular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato-Thin';
-  src: url('../fonts/Lato-Thin.eot');
-  src: url('../fonts/Lato-Thin.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Thin.woff') format('woff'), url('../fonts/Lato-Thin.ttf') format('truetype'), url('../fonts/Lato-Thin.svg#Lato-Thin') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
 #toTop {
   display: none !important;
 }
 p {
   font-size: 16px;
-  font-family: 'Lato-Regular', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #666666;
   line-height: 1.5em;
 }
@@ -2000,12 +1965,13 @@ p.cartqty {
   padding: 0 10px 0 0;
   position: relative;
   z-index: 2;
-  font-family: 'Lato-Thin', sans-serif;
+  font-family: 'Lato', sans-serif;
+	font-weight: 100;
 }
 .header-switch span.current {
   display: inline-block;
   color: white;
-  font-family: 'Lato-Regular', sans-serif;
+  font-family: 'Lato', sans-serif;
   padding: 0 12px 0 5px;
   background: url("../images/caret.png") no-repeat;
   background-size: 10px 8px !important;
@@ -2076,7 +2042,8 @@ p.cartqty {
 }
 .links li a {
   color: white !important;
-  font-family: 'Lato-Thin', sans-serif;
+  font-family: 'Lato', sans-serif;
+	font-weight: 100;
 }
 .links li a:hover {
   color: white !important;
@@ -2158,7 +2125,7 @@ p.cartqty {
   padding: 0 0 0 39px;
   color: white;
   font-size: 14px;
-  font-family: 'Lato-Regular', sans-serif;
+  font-family: 'Lato', sans-serif;
   line-height: 38px;
   text-transform: uppercase;
   white-space: nowrap;
@@ -3043,7 +3010,8 @@ p.cartqty {
 #queldoreiNav li.level-top > a {
   font-size: 14px;
   text-transform: uppercase;
-  font-family: 'Lato-Black', sans-serif;
+	font-family: 'Lato', sans-serif;
+	font-weight: 900;
   color: #fff;
   opacity: 0.8;
   text-decoration: none;
@@ -4012,7 +3980,7 @@ div.alert button:hover {
   display: block;
   margin: 0;
   font-size: 24px;
-  font-family: "Lato-Regular", sans-serif;
+  font-family: "Lato", sans-serif;
   font-style: normal;
   color: #000;
   color: rgba(0, 0, 0, 0.67);
@@ -4020,12 +3988,13 @@ div.alert button:hover {
 }
 .category-description-texte p {
   margin: 22px 0 0;
-  font-family: 'Lato-Thin', sans-serif;
+  font-family: 'Lato', sans-serif;
+	font-weight: 100;
 }
 .category-description-texte strong {
   color: #fff;
-  font-family: 'Lato-Thin', sans-serif;
-  font-style: normal;
+  font-family: 'Lato', sans-serif;
+	font-weight: 100;
 }
 .category-description img {
   max-width: 100%;
@@ -5770,7 +5739,8 @@ div.alert button:hover {
   padding: 8px 12px;
   font-size: 30px;
   font-weight: 100px;
-  font-family: "Lato-thin", sans-serif;
+  font-family: "Lato", sans-serif;
+	font-weight: 100;
 }
 button .button span span {
   padding: 0px;
